kubernetes/gitlab-deployment.yaml
##########################################################################
# PostgreSQL
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: gitlab
    tiers: database
spec:
  type: ClusterIP
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: gitlab
    tiers: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tiers: database
    spec:
      containers:
      - image: amd64/postgres:9.4
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: gitlab-db
          mountPath: /var/lib/postgresql/data
        - name: gitlab-dblog
          mountPath: /var/log/postgresql
      volumes:
      - name: gitlab-db
        persistentVolumeClaim:
          claimName: gitlab-db
      - name: gitlab-dblog
        persistentVolumeClaim:
          claimName: gitlab-dblog
---
##########################################################################
# Redis
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: gitlab
spec:
  ports:
    - name: redis-tcp
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: gitlab
    tier: caching
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tier: caching
    spec:
      containers:
      - image: amd64/redis:4.0
        name: redis
        ports:
        - containerPort: 6379
          name: redis-tcp
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 6279
          initialDelaySeconds: 30
          timeoutSeconds: 30
---
##########################################################################
# GitLab
##########################################################################
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
    tiers: webapp
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 22
    protocol: TCP
  - name: http-alt
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: gitlab
    tiers: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
    tiers: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab
        tiers: webapp
    spec:
      containers:
      - image: gitlab/gitlab-ce:latest
        name: gitlab
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: gitlab-data
          mountPath: /var/opt/gitlab
        livenessProbe:
          tcpSocket:
              port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 80
          timeoutSeconds: 5
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data
---
